Closed Bug 937972 Opened 11 years ago Closed 11 years ago

Firefox 26.0b4 and Aurora27.0a2 crash in gfxContext::gfxContext(mozilla::gfx::DrawTarget*) if gfx.content.azure.enabled = false

Categories

(Core :: Graphics, defect)

26 Branch
x86
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla26
Tracking Status
firefox26 + verified
firefox27 + verified
firefox28 + unaffected
b2g-v1.2 --- fixed

People

(Reporter: alice0775, Assigned: mattwoodrow)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-55312f81-791b-479a-82f8-00e022131113.
=============================================================

Steps To Reproduce
1. set gfx.content.azure.enabled = false
2. Restart

Actual Results:
Browser crashes
Regression window(beta)
Good:
http://hg.mozilla.org/releases/mozilla-beta/rev/54c13d627593
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20131111105613
Bad:
http://hg.mozilla.org/releases/mozilla-beta/rev/0aff8f2eff7e
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20131111110014
Pushlog:
http://hg.mozilla.org/releases/mozilla-beta/pushloghtml?fromchange=54c13d627593&tochange=0aff8f2eff7e
Keywords: regression
Summary: Firefox 26.0b4 crash in gfxContext::gfxContext(mozilla::gfx::DrawTarget*) if gfx.content.azure.enabled = false → Firefox 26.0b4 and Aurora27.0a2 crash in gfxContext::gfxContext(mozilla::gfx::DrawTarget*) if gfx.content.azure.enabled = false
Regression window(aurora)
Good:
http://hg.mozilla.org/releases/mozilla-aurora/rev/1368e2ac4c57
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 ID:20131111105111
Bad:
http://hg.mozilla.org/releases/mozilla-aurora/rev/e94179cf1740
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 ID:20131111110010
Pushlog:
http://hg.mozilla.org/releases/mozilla-aurora/pushloghtml?fromchange=1368e2ac4c57&tochange=e94179cf1740
Suspected: Bug 934860
Blocks: 934860
OS: Windows NT → Windows 7
Last Good: dc14c876fba6
First Bad: 866ff3287e56

Triggered by
	866ff3287e56	Matt Woodrow — Bug 934860 - Move paint region clipping into DrawThebesLayer. r=roc, a=
Assignee: nobody → matt.woodrow
Attached patch Fix crashesSplinter Review
We can't remove the non-azure paths on aurora/beta, since the pref still exists there.

This patch should only be applied to those branches, not m-c.
Attachment #831926 - Flags: review?(bas)
Tracking all the way to Nightly in case we need to deal with this again after the next merge.
Comment on attachment 831926 [details] [diff] [review]
Fix crashes

[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 934860
User impact if declined: Crashes for windows direct2d users that have disabled azure via pref
Testing completed (on m-c, etc.): None, this patch only applies to the branches.
Risk to taking this patch (and alternatives if risky): Very low risk, mainly just reverts some of the original changes.
String or IDL/UUID changes made by this patch: None
Attachment #831926 - Flags: approval-mozilla-beta?
Attachment #831926 - Flags: approval-mozilla-aurora?
Attachment #831926 - Flags: review?(bas) → review+
Attachment #831926 - Flags: approval-mozilla-beta?
Attachment #831926 - Flags: approval-mozilla-beta+
Attachment #831926 - Flags: approval-mozilla-aurora?
Attachment #831926 - Flags: approval-mozilla-aurora+
Keywords: verifyme
I've verified the bug on Firefox 26.06 and the browser doesn't crash anymore.
However I found a different related issue:

Steps To Reproduce
1. Open the browser in window mode.
2. set gfx.content.azure.enabled = false
3. Press Maximize button on the browser.

Expected:
The window of the browser is maximized without issues.

Actual:
The window is maximized but the display of the browser turns black for several seconds.
Catalin, please file a new bug for the issue you described.
Keywords: verifyme
Whiteboard: [DUPE ME]
I have also crashes with this error message (Aurora 27.0a2), but gfx.content.azure.enabled is set to true. My crash report: https://crash-stats.mozilla.com/report/index/9949898e-edae-403d-aa98-7d9712131130
That looks like a new issue, can you file a bug with steps to reproduce it please!
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: