Bug 937972 - Fix crashes for Windows Direct2D users that have Azure disabled. r=Bas, a=lsblakk